--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+
+    def fragment_version = "1.3.0-alpha06"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 }
